# githubctl

./: .gitignore  README.md  pyproject.toml
src/githubctl/: __init__.py  github.py  main.py  utils.py
src/githubctl/cli/: repo.py  user.py
src/githubtypr/: main.py  options.py  utils.py
tests/: people.json  test.py
